--- a/site/wp-content/themes/catapult/sass/_catapult-common.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-common.scss
@@ -194,6 +194,9 @@ a.fancy {
   letter-spacing: 0.05em;
   line-height: 1em;
   font-weight: normal;
+  font-size: 2.5em;
+}
+span.header-title {
   font-size: 1.2em;
 }
 
