--- a/site/wp-content/themes/catapult/sass/_catapult-locations.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-locations.scss
@@ -33,6 +33,7 @@
   
   .map-callout-img {
     float: left;
+    overflow: hidden;
     border: 1px solid $orange;
     width: 156px;
     height: 156px;
