--- a/site/wp-content/themes/catapult/sass/main.scss
+++ b/site/wp-content/themes/catapult/sass/main.scss
@@ -5,18 +5,19 @@
 @import "catapult-floater";
 @import "catapult-header";
 @import "catapult-intro";
-@import "catapult-keyofferings";
+//@import "catapult-keyofferings";
 @import "catapult-press";
-@import "catapult-casestudies";
+//@import "catapult-casestudies";
 @import "catapult-team";
-@import "catapult-partners";
+//@import "catapult-partners";
 @import "catapult-locations";
 @import "catapult-contact";
-@import "catapult-drawer";
+//@import "catapult-drawer";
 @import "catapult-events";
 @import "catapult-donate";
 @import "catapult-blog";
 @import "catapult-thanks";
 @import "catapult-services";
+@import "catapult-404";
 @import "catapult-footer";
 @import "boilerplate-2";
