--- a/site/wp-content/themes/catapult/sass/main.scss
+++ b/site/wp-content/themes/catapult/sass/main.scss
@@ -16,6 +16,7 @@
 @import "catapult-events";
 @import "catapult-donate";
 @import "catapult-blog";
+@import "catapult-faq";
 @import "catapult-thanks";
 @import "catapult-services";
 @import "catapult-404";
