--- a/site/wp-content/themes/catapult/css/main.css
+++ b/site/wp-content/themes/catapult/css/main.css
@@ -3008,7 +3008,13 @@ html.no-touch .team-member-details.hover {
   font-size: 2.5em;
   line-height: 1em;
 }
-/* line 122, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+@media only screen and (max-width: 350px) {
+  /* line 117, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+  .post-title {
+    font-size: 1.5em;
+  }
+}
+/* line 126, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-title a {
   text-decoration: none;
   color: #FFFFFF;
@@ -3017,26 +3023,26 @@ html.no-touch .team-member-details.hover {
 /* -------------------
   TAGS
 -------------------- */
-/* line 133, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 137, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .tags {
   overflow: hidden;
   margin: 0;
   padding: 0;
   float: left;
 }
-/* line 139, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 143, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .tags .tag {
   list-style: none;
   float: left;
   margin: 0;
   padding-right: 5px;
 }
-/* line 145, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 149, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .tags .tag:last-of-type {
   padding-right: 0;
 }
 
-/* line 150, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 154, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .category-item {
   display: inline-block;
   text-decoration: none;
@@ -3050,41 +3056,38 @@ html.no-touch .team-member-details.hover {
   -moz-border-radius: 1px;
   border-radius: 1px;
 }
-/* line 161, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 165, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .category-item:hover {
   border-top: 1px solid rgba(255, 255, 255, 0.2);
 }
-/* line 165, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
-.category-item.education {
+/* line 169, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+.category-item.mobility {
   background: #29272a;
 }
-/* line 169, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
-.category-item.innovation {
+/* line 173, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+.category-item.enterprise {
   background: #f2ca0d;
   color: #666;
 }
-/* line 174, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
-.category-item.newsletter {
-  background: #ec5062;
-}
 /* line 178, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
-.category-item.insights {
+.category-item.health-agriculture {
+  background: #ec5062;
+  color: #e3dcd8;
+}
+/* line 183, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+.category-item.energy {
   background: #f2ad4b;
   color: #666;
 }
-/* line 183, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
-.category-item.engineering {
+/* line 188, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+.category-item.water-sanitation {
   background: #84b6b4;
-}
-/* line 187, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
-.category-item.ideation {
-  background: #ec5062;
 }
 
 /* -------------------
   POST SUMMARY BOX (BLOG HOMEPAGE)
 -------------------- */
-/* line 198, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 199, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box {
   display: block;
   overflow: hidden;
@@ -3092,84 +3095,84 @@ html.no-touch .team-member-details.hover {
   padding: 20px;
   position: relative;
 }
-/* line 205, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 206, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box.with-bg {
   background: #515052;
 }
-/* line 209, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 210, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box:first-of-type {
   margin-top: 0;
 }
-/* line 213, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 214, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box:last-of-type {
   margin-bottom: 40px;
 }
-/* line 217, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 218, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box figure {
   float: left;
   width: 30%;
   margin-right: 5%;
 }
-/* line 223, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 224, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .tags {
   margin-top: 20px;
 }
-/* line 227, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 228, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-main-link {
   display: block;
   overflow: hidden;
 }
-/* line 232, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 233, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-image {
   max-width: 100%;
 }
-/* line 239, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 240, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-top {
   padding: 0;
   float: left;
   width: 65%;
 }
-/* line 244, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 245, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-top.full-width {
   width: 100%;
 }
-/* line 248, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 249, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-top.twitter {
   padding-bottom: 20px;
 }
-/* line 252, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 253, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-top p {
   margin: 0;
 }
-/* line 257, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 258, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-title {
   margin: -4px 0 0 0;
   padding: 0 0 11px 0;
   text-shadow: -1px -1px 0px rgba(0, 0, 0, 0.5);
 }
-/* line 262, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 263, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-title a:hover {
   color: #f2ad4b;
 }
-/* line 267, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 268, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-subtitle {
   margin: 0;
   padding: 0;
 }
-/* line 272, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 273, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-tweet {
   padding: 0;
   margin: 0;
   margin-bottom: 20px;
 }
-/* line 279, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 280, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-tweetlink,
 .post-box .post-tweetdate {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   text-decoration: none;
   color: #e3dcd8;
 }
-/* line 285, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 286, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post-box .post-meta {
   display: block;
   padding: 0 0 10px 0;
@@ -3180,20 +3183,26 @@ html.no-touch .team-member-details.hover {
 /* -------------------
   SEARCH BOX
 -------------------- */
-/* line 302, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 304, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box form {
   overflow: hidden;
   padding-bottom: 5px;
   float: right;
   width: 31.25%;
 }
-/* line 308, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+@media only screen and (max-width: 350px) {
+  /* line 304, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+  .search-box form {
+    display: none;
+  }
+}
+/* line 314, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box form input[type="text"] {
   float: left;
   width: 80%;
   height: 31px;
 }
-/* line 314, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 320, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box form input[type="submit"] {
   float: left;
   width: 16%;
@@ -3203,7 +3212,7 @@ html.no-touch .team-member-details.hover {
   height: 51px;
   margin-top: -20px;
 }
-/* line 325, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 331, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box .filters {
   margin: 0;
   padding: 0;
@@ -3211,51 +3220,50 @@ html.no-touch .team-member-details.hover {
   float: left;
   width: 68.75%;
 }
-/* line 332, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+@media only screen and (max-width: 350px) {
+  /* line 331, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+  .search-box .filters {
+    width: 100%;
+  }
+}
+/* line 342, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box .filters li {
   list-style: none;
   float: left;
   display: block;
-  font-size: 1.5em;
   letter-spacing: 1px;
   margin: 0;
   padding: 0 19px 0 0;
 }
 @media only screen and (max-width: 615px) {
-  /* line 332, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+  /* line 342, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
   .search-box .filters li {
     padding-right: 10px;
   }
 }
-/* line 345, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 354, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box .filters li:last-of-type {
   padding: 0;
 }
-/* line 349, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 358, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box .filters li a {
-  font-size: 1.2em;
+  font-size: 1.6em;
   letter-spacing: 1px;
   text-decoration: none;
   color: #e0dad8;
 }
-/* line 356, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 365, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .search-box .filters li a:hover, .search-box .filters li a.active {
   color: #f2ad4b;
 }
-@media only screen and (max-width: 615px) {
-  /* line 349, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
-  .search-box .filters li a {
-    font-size: 0.9em;
-  }
-}
 @media only screen and (max-width: 490px) {
-  /* line 349, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+  /* line 358, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
   .search-box .filters li a {
-    font-size: 0.6em;
+    font-size: 1.3em;
   }
 }
 
-/* line 371, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 377, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .clicky-button--search {
   padding: 5px 2%;
   font-size: 1.1em;
@@ -3265,26 +3273,26 @@ html.no-touch .team-member-details.hover {
 /* -------------------
   SINGLE BLOG POST
 -------------------- */
-/* line 382, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 388, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post {
   background: #515052;
   padding: 20px;
   margin-bottom: 40px;
 }
-/* line 390, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 396, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post .post-border .post-figure {
   display: block;
   position: relative;
   z-index: 1;
 }
-/* line 395, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 401, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post .post-border .post-figure .post-image {
   z-index: -1;
   display: block;
   max-width: 100%;
   position: relative;
 }
-/* line 403, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 409, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post .post-border .post-figure::before {
   display: block;
   content: '';
@@ -3295,37 +3303,42 @@ html.no-touch .team-member-details.hover {
   -moz-box-shadow: inset 1px 5px 5px 0px rgba(0, 0, 0, 0.5);
   box-shadow: inset 1px 5px 5px 0px rgba(0, 0, 0, 0.5);
 }
-/* line 413, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 419, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post .post-title {
   font-size: 2.8em;
   text-align: left;
   margin: 0 0 20px 0;
 }
-/* line 419, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 425, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post .post-meta {
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   padding-bottom: 12px;
 }
-/* line 424, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 430, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post .post-author {
   color: #e3dcd8;
   font-size: 1em;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
   color: #e3dcd8;
 }
-/* line 432, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 438, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .post .post-map small {
   display: none;
+}
+/* line 443, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+.post #locations-map {
+  width: 100%;
+  height: 400px;
 }
 
 /* -------------------
   POST COMMENTS
 -------------------- */
-/* line 444, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 455, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 #commentform h2 {
   font-size: 1.7em;
 }
-/* line 449, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 460, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 #commentform input[type="text"],
 #commentform textarea {
   width: 100%;
@@ -3333,45 +3346,45 @@ html.no-touch .team-member-details.hover {
   background: #e3dcd8;
   color: #29272a;
 }
-/* line 460, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 471, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 #commentform textarea {
   resize: none;
   padding: 15px;
 }
 
-/* line 466, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 477, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .commentlist {
   list-style: none;
   padding: 0;
   margin: 0;
 }
-/* line 471, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 482, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .commentlist h2 {
   font-size: 1.6em;
 }
-/* line 475, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 486, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .commentlist .comment {
   margin: 0 0 20px 0;
   font-family: "Palatino Linotype", "Book Antiqua", Palatino, serif;
 }
-/* line 487, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 498, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .commentlist .comment p {
   margin: 0;
   padding: 0;
 }
 
-/* line 494, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 505, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .related-header {
   margin: 10px 0 0 0;
   padding: 0;
 }
 
-/* line 499, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 510, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .related-articles {
   margin: 0;
   padding: 0;
 }
-/* line 503, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 514, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .related-articles .related-article {
   margin: 15px 0;
   padding: 0;
@@ -3379,12 +3392,12 @@ html.no-touch .team-member-details.hover {
   line-height: 1.2em;
   font-size: 1.3em;
 }
-/* line 510, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 521, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .related-articles .related-article a {
   color: #e3dcd8;
   text-decoration: none;
 }
-/* line 514, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 525, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .related-articles .related-article a:hover {
   color: #f2ad4b;
 }
@@ -3392,15 +3405,20 @@ html.no-touch .team-member-details.hover {
 /* -------------------
   FLICKR GALLERY (MASONRY)
 -------------------- */
-/* line 527, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 538, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 .flickr-gallery .figure {
   margin-bottom: 10px;
 }
 
-/* line 536, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
+/* line 547, site/wp-content/themes/catapult/sass/_catapult-blog.scss */
 img.pe2-photo.picasa-image {
   padding: 0;
   border: none;
+}
+
+/* line 2, site/wp-content/themes/catapult/sass/_catapult-faq.scss */
+.faqs section {
+  padding-top: 0;
 }
 
 /* line 4, site/wp-content/themes/catapult/sass/_catapult-thanks.scss */
