Fixes category page.

--- a/site/wp-content/themes/catapult/sass/_catapult-common.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-common.scss
@@ -201,6 +201,10 @@ span.header-title {
 
 .header-link {
   text-decoration: none;
+  
+  &:hover {
+    text-decoration: underline;
+  }
 }
 
 .title-shadow {
