--- a/site/wp-content/themes/catapult/sass/_catapult-footer.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-footer.scss
@@ -25,7 +25,7 @@ footer {
       }
 
       a {
-        color: white;
+        color: $lightGreyFont;
         text-decoration: none;
         font-size: 1.5em;
         letter-spacing: 1px;
