--- a/site/wp-content/themes/catapult/sass/_catapult-blog.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-blog.scss
@@ -155,7 +155,7 @@
   display: inline-block;
   text-decoration: none;
   padding: 4px 7px 5px 7px;
-  margin: 0;
+  margin: 0 0 4px 0;
   background: $orange;
   color: #666;
   font-weight: normal;
