--- a/site/wp-content/themes/catapult/sass/_catapult-thanks.scss
+++ b/site/wp-content/themes/catapult/sass/_catapult-thanks.scss
@@ -1,52 +1,65 @@
+.thanks {
 
-.donors {
-	
-	.donors__list {
-		list-style-type: none;
-		overflow: hidden;
-		padding: 0;
-		margin: 0;
-		width: 100%;
-		
-		.donors__list__item {
-			float: left;
-			padding: 1%;
-		}
-	}
+  .team {
+    margin: 0 0 10px 0;
+    
+    .team-list {
+      list-style-type: none;
+      overflow: hidden;
+      padding: 0;
+      margin: 0;
+      width: 100%;
+
+      .team-list__item {
+        float: left;
+        padding: 1%;
+      }
+    }
+  }
+  
+  .donors {
+    .donors-col {
+      padding-left: 17px;
+      width: 25%;
+    }
+    .donors-item {
+      
+    }
+  }
 }
 
 .overlay__form {
-	width: 100%;
-  
+  width: 100%;
+
   .clicky-button {
     margin-top: 20px;
   }
-	
-	.overlay__form__item {
-		width: 100%;
-		display: block;
-		padding: 5px 0;
-	}
-	
-	.overlay__form__input {
-		border: 1px solid #666;
-		margin: 0;
-		color: black;
-	}
-  
+
+  .overlay__form__item {
+    width: 100%;
+    display: block;
+    padding: 5px 0;
+  }
+
+  .overlay__form__input {
+    border: 1px solid #666;
+    margin: 0;
+    color: black;
+  }
+
   input[type="text"] {
     width: 200px;
   }
-	
-	.hide {
-		display: none;
-	}
-	.show {
-		display: block;
-	}
-	
-	textarea {
-		width: 520px;
-		height: 150px;
-	}
+
+  .hide {
+    display: none;
+  }
+  .show {
+    display: block;
+  }
+
+  textarea {
+    width: 520px;
+    height: 150px;
+  }
 }
