--- a/site/wp-content/themes/catapult/sass/main.scss
+++ b/site/wp-content/themes/catapult/sass/main.scss
@@ -1,5 +1,7 @@
 @import "normalize";
 @import "boilerplate-1";
+@import "royalslider";
+@import "royalslider-default";
 @import "catapult-variables";
 @import "catapult-common";
 @import "catapult-floater";
